--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^4.0.3",
     "redux-persist": "^6.0.0",
-    "svgo": "^3.0.2",
+    "svgo": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -26,7 +26,8 @@
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src"
   },
   "eslintConfig": {
     "extends": [
@@ -51,4 +52,3 @@
     "prop-types": "^15.8.1"
   }
 }
-
